Add validation to POST and PUT endpoints & update swagger file
